--- a/css/personCenter.css
+++ b/css/personCenter.css
@@ -1,16 +1,156 @@
 header {
     width: 100%;
     background-color: #333;
-    padding: 0 14px;
-    box-sizing: border-box;
+}
+
+header>div {
+    width: 1250px;
+    margin: 0 auto;
 }
 
 header .left {
     float: left;
 }
 
+header .loginmsg {
+
+    position: relative;
+}
+
+header .loginmsg::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
 header .right {
     float: right;
+}
+
+header .right>li {
+    padding: 9px 0;
+}
+
+header .right li a {
+    border-right: solid 1px #424242;
+    padding: 0 10px;
+}
+
+header .right li:last-child a {
+    border-right: none;
+}
+
+header .right .userid {
+    font-size: 12px;
+    color: #b0b0b0;
+    line-height: 40px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    position: relative;
+}
+
+header .right .userid::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+header .right .userid ol {
+    position: absolute;
+    top: 41px;
+    left: 0;
+    background-color: #fff;
+    z-index: 5;
+    display: none;
+}
+
+header .right .userid ol li {
+    width: 100%;
+    text-align: center;
+    line-height: 30px;
+}
+
+header .right .userid ol li a {
+    border-right: none;
+    color: #424242;
+}
+
+header .right i {
+    padding: 0 5px;
+}
+
+header .shortcar {
+    float: right;
+    font-size: 12px;
+    color: #b0b0b0;
+    line-height: 40px;
+    padding: 0 20px;
+    box-sizing: border-box;
+    background-color: #424242;
+    cursor: pointer;
+    position: relative;
+}
+
+header .shortcar>b {
+    font-weight: normal;
+}
+
+header .shortcar .shortlist {
+    position: absolute;
+    width: 300px;
+    min-height: 93px;
+    background-color: #fff;
+    z-index: 5;
+    top: 41px;
+    right: 0;
+    display: none;
+    transition: height .8s;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, .15);
+    color: #424242;
+}
+
+header .shortlist>p {
+    line-height: 93px;
+    width: 100%;
+    font-size: 12px;
+    color: #424242;
+    text-align: center;
+}
+
+header .shortcar .shortlist ul {
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+header .shortcar .shortlist ul li {
+    width: 100%;
+    padding: 20px 0;
+    border-bottom: solid 1px #ccc;
+}
+
+header .shortcar .shortlist ul li div {
+    display: inline-block;
+    line-height: 20px;
+    width: 100px;
+    height: 36px;
+    overflow: hidden;
+
+}
+
+header .shortcar .shortlist ul img {
+    width: 60px;
+    vertical-align: -15px;
+}
+
+header .shortcar .shortlist ul li>span {
+    float: right;
+    margin-top: 5px;
+    margin-right: 10px;
+}
+
+header .shortcar:hover {
+    background-color: #fff;
 }
 
 header li {
@@ -33,6 +173,30 @@ header::after {
     content: '';
     display: block;
     clear: both;
+}
+
+header .personmsg {
+    position: absolute;
+    width: 123px;
+    min-height: 92px;
+    background-color: #fff;
+    z-index: 10;
+    top: 41px;
+    right: 277px;
+    display: none;
+    transition: height .8s;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, .15);
+}
+
+header .personmsg ul li {
+    width: 100%;
+    text-align: center;
+    line-height: 10px;
+}
+
+header .personmsg ul li a {
+    font-size: 12px;
+    color: #424242;
 }
 
 .box {
